--- a/IntoCryptoSwiftUI/SwiftfulCrypto/Info.plist
+++ b/IntoCryptoSwiftUI/SwiftfulCrypto/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Crypto Tracker</string>
+	<string>IntoCrypto</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
