--- a/IntoCryptoSwiftUI/SwiftfulCrypto.xcodeproj/xcshareddata/xcschemes/IntoCrypto.xcscheme
+++ b/IntoCryptoSwiftUI/SwiftfulCrypto.xcodeproj/xcshareddata/xcschemes/IntoCrypto.xcscheme
@@ -50,6 +50,19 @@
             ReferencedContainer = "container:SwiftfulCrypto.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "v"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "c"
+            value = ""
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
